@@ -163,6 +163,10 @@ features:
 - new presolving step in cons_knapsack (detectRedundantVars, deleteRedundantVars) which determines redundant variables in knapsack constraint with or without using clique information
 - SCIPcreateSolNLP() now creates a SCIP_SOL that is linked to the solution of the current NLP relaxation
 - it is now possible in SCIP_STAGE_TRANSFORMED to call SCIPaddVarLocks (i.e. to lock variables in initialization methods)
+- new variable $(INSTALLDIR) in Makefile which define installation directory for the libraries, $(INSTALLDIR)/lib/, 
+  binary, $(INSTALLDIR)/bin, and include headers, $(INSTALLDIR)/include, the default value is the empty string
+- new target in Makefile "install" performs "make" and copies the include headers
+- new target in Makefile "uninstall" removes libraries, binary, and include headers
 
 design:
 - SCIP_HASHMAP now works also without block memory
